[project]
name = "gestalt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"PyYAML==6.0.1",
	"hvac>=1.0.2,<1.1.0",
	"jsonpath-ng==1.5.3",
	"retry==0.9.2",
	"python-dateutil>=2.8.0",
]

[tool.uv]
dev-dependencies = [
	"yapf==0.29.0",
	"flake8==3.7.9",
	"mypy==0.910",
	"mypy-extensions==0.4.3",
	"pytest>=6.2.5,<7.0",
	"pytest-cov>=2.8,<3.0",
	"pytest-mock>=3.2,<4.0",
	"hvac>=1.0.2,<1.1.0",
	"types-requests==2.25.2",
	"types-PyYAML==6.0.12.11",
	"retry==0.9.2",
	"types-retry==0.9.9",
	"jsonpath-ng==1.5.3",
	"pytest-asyncio==0.19.0",
	"python-dateutil>=2.8.0",
	"types-retry==0.9.9",
	"types-python-dateutil>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gestalt"]

[[tool.uv.index]]
url = "https://artifacts.co.clearstreet.io/artifactory/api/pypi/python/simple"
default=true
