[project]
name = "gestalt"
version = "3.4.4"
description = "Gestalt is an opinionated, strongly typed, configuration library for Python 3.8+. Gestalt aims to simplify configuration loading, getting/setting, and management by letting the user focus on writing programs, and letting Gestalt check configuration types, location, and environment variable overrides."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"PyYAML==6.0.1",
	"hvac>=1.0.2,<1.1.0",
	"jsonpath-ng==1.5.3",
	"retry==0.9.2",
	"python-dateutil>=2.8.0",
]
authors = [
  {name="Clear Street", email = "engineering@clearstreet.io"},
]
license = "MIT"
license-files = ["LICENCSE"]
classifiers=[
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Topic :: Software Development :: Libraries",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.6",
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3 :: Only",
   "Operating System :: OS Independent",
]

[tool.uv]
dev-dependencies = [
	"flake8",
	"mypy==0.910",
	"mypy-extensions==0.4.3",
	"pytest>=6.2.5,<7.0",
	"pytest-cov>=2.8,<3.0",
	"pytest-mock>=3.2,<4.0",
	"hvac>=1.0.2,<1.1.0",
	"types-requests==2.25.2",
	"types-PyYAML==6.0.12.11",
	"retry==0.9.2",
	"types-retry==0.9.9",
	"jsonpath-ng==1.5.3",
	"pytest-asyncio==0.19.0",
	"python-dateutil>=2.8.0",
	"types-retry==0.9.9",
	"types-python-dateutil>=0.1.0",
	"mypy>=0.910",
	"yapf>=0.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gestalt"]
